--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "my-typescript-app",
+  "name": "sorting-visualizer",
   "version": "0.1.0",
   "private": true,
+  "description": "An interactive web application for visualizing various sorting algorithms including merge sort, quick sort, bubble sort, and selection sort",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.61",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^20.17.14",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "framer-motion": "^12.23.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "react-tooltip": "^5.29.1",
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "typescript": "^5.8.3"
   }
 }
